k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: comment-manager-backend
  labels:
    app: comment-manager
    component: backend
spec:
  type: ClusterIP
  ports:
  - port: 4000
    targetPort: 4000
    protocol: TCP
    name: http
  selector:
    app: comment-manager
    component: backend

---
apiVersion: v1
kind: Service
metadata:
  name: comment-manager-frontend
  labels:
    app: comment-manager
    component: frontend
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: comment-manager
    component: frontend

---
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: comment-manager
    component: redis
spec:
  type: ClusterIP
  ports:
  - port: 6379
    targetPort: 6379
    protocol: TCP
    name: redis
  selector:
    app: comment-manager
    component: redis
